# aidebate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  debate.py  debug-docker.sh  docker-compose.yml  package.json  pyproject.toml  railway.toml  run-docker.sh  run.py  start.py
app/: __init__.py  business_engine.py  debate_engine.py  main.py  main.py.modified
app/static/css/: styles.css
app/static/js/: progress.js  railway-debug.js
app/templates/: base.html  business.html  business_progress.html  business_results.html  error.html  https_debug.html  https_test.html  index.html  progress.html  results.html
